starting to come together

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" />
-    <title>Node Databases FTW!</title>
+    <title>A Real Database Rethink</title>
     <link rel="stylesheet" type="text/css" href="style/markbase.css">
     <link rel="stylesheet" type="text/css" href="style/markthemes.css">
     <link rel="stylesheet" type="text/css" href="style/highlight.css">
@@ -29,7 +29,7 @@
       </article>
 
       <footer>
-        Node Databases FTW!
+        A Real Database Rethink
         <img src="img/helmet1.png">
       </footer>
 
@@ -37,7 +37,10 @@
 
     <script src="js/bespoke.min.js"></script>
     <script src="js/bespoke-hash.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/bespoke-bullets.min.js"></script>
+    <script>
+      bespoke.horizontal.from('article', { hash: true, bullets: true })
+    </script>
   </body>
 </script>
 </body>
