the node approach applied to databases

--- a/index.html
+++ b/index.html
@@ -88,6 +88,36 @@
         </section>
       
         <section>
+          <h2>The Node approach</h2>
+<div data-bespoke-bullet>
+
+<ul>
+ <li>Small core, vibrant user-land</li>
+ <li>Extreme modularity</li>
+ <li>Reimplement everything in JavaScript!</li>
+</ul>
+
+</div>
+<div data-bespoke-bullet>
+
+<p>Applied to databases?</p>
+
+<ul>
+ <li>Small core: LevelUP</li>
+ <li>Everything as a module</li>
+ <li>Pulling in many aspects of database <em>practice</em> &amp; <em>theory</em></li>
+</ul>
+
+<p>
+(internal data relationships, data relationship with the application, storage technology, distributed methodologies)
+</p>
+
+</div>
+
+
+        </section>
+      
+        <section>
           <table class="ecosystem">
   <tr class="tools">
     <td class="section"><span>Tools</span></td>
