--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </tr></table></td>
   </tr>
   <tr class="pluggability">
-    <td class="section"><span>Pluggability</span></td>
+    <td class="section"><span>Extensibility</span></td>
     <td><table><tr>
       <td>sublevel</td>
       <td>level-hooks</td>
