--- a/index.html
+++ b/index.html
@@ -287,6 +287,12 @@
 <p><strong>From:</strong> a 1-dimensional storage array</p>
 <p><strong>To:</strong> a multi-dimensional data tool for customised solutions</p>
 <p>The Level* ecosystem: A menu of <em>beautiful</em>, but <em>small</em> abstractions</p>
+<p data-bespoke-bullet></p>
+
+<p data-bespoke-bullet style="text-align: center; font-style: italic; padding-top: 50px; color: #444;">
+  end / deireadh
+  <br><img src="img/helmet1.png" style="width: 100px; margin-top: 20px;">
+</p>
 
         </section>
       
