--- a/index.html
+++ b/index.html
@@ -119,10 +119,6 @@
  <li>Pulling in many aspects of database <em>practice</em> &amp; <em>theory</em></li>
 </ul>
 
-<p>
-(internal data relationships, data relationship with the application, storage technology, distributed methodologies)
-</p>
-
 </div>
 
 
@@ -235,7 +231,7 @@
       
         <section>
           <h2>LevelUP</h2>
-<p>Inspired by LevelDB, but not necessarily dependent upon it</p>
+<p>Inspired by LevelDB</p>
 <p><i>Backed</i> by a key/value store for arbitrary data, sorted by key</p>
 <ul>
 <li>Core operations: <code>put()</code>, <code>get()</code>, <code>del()</code></li>
