--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
  <li>Pulling in many aspects of database <em>practice</em> &amp; <em>theory</em></li>
 </ul>
 
+<p>Targeted solutions</p>
+
 </div>
 
 
@@ -239,6 +241,32 @@
 <li>ReadStream: <em>the secret sauce</em></li>
 <li>WriteStream: <em>for convenience</em></li>
 </ul>
+<p data-bespoke-bullet></p>
+
+<div data-bespoke-bullet>
+<table class="contribs">
+  <tr>
+  <td><img src="img/u_chesles.jpg"><span>@chesles</span></td>
+  <td><img src="img/u_raynos.jpg"><span>@raynos</span></td>
+  <td><img src="img/u_dominictarr.jpg"><span>@dominictarr</span></td>
+  <td><img src="img/u_maxogden.png"><span>@maxogden</span></td>
+  <td><img src="img/u_ralph.jpg"><span>@ralphtheninja</span></td>
+  <td><img src="img/u_kesla.jpg"><span>@kesla</span></td>
+  <td><img src="img/u_juliangruber.png"><span>@juliangruber</span></td>
+</tr>
+</table>
+<table class="contribs">
+<tr>
+  <td><img src="img/u_hij1nx.png"><span>@hij1nx</span></td>
+  <td><img src="img/u_no9.jpg"><span>@no9</span></td>
+  <td><img src="img/u_mcollina.jpg"><span>@mcollina</span></td>
+  <td><img src="img/u_pgte.jpg"><span>@pgte</span></td>
+  <td><img src="img/u_substack.jpg"><span>@substack</span></td>
+  <td><img src="img/u_rvagg.png"><span>@rvagg</span></td>
+  </tr>
+</table>
+</div>
+
 
         </section>
       
@@ -289,6 +317,7 @@
   end / deireadh
   <br><img src="img/helmet1.png" style="width: 100px; margin-top: 20px;">
 </p>
+
 
         </section>
       
